--- a/.zpreztorc
+++ b/.zpreztorc
@@ -40,8 +40,8 @@ zstyle ':prezto:load' pmodule \
   'utility' \
   'completion' \
   'syntax-highlighting' \
-  'autosuggestions' \
   'history-substring-search' \
+  'autosuggestions' \
   'prompt'
 
 #
@@ -49,7 +49,7 @@ zstyle ':prezto:load' pmodule \
 #
 
 # Set the query found color.
-# zstyle ':prezto:module:autosuggestions:color' found ''
+ zstyle ':prezto:module:autosuggestions:color' found ''
 
 #
 # Completions
